.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
07:00:31 **** Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:00:56 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:35:01 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp: In function ‘int main()’:
../src/Initial.cpp:15:10: warning: format ‘%d’ expects argument of type ‘int*’, but argument 2 has type ‘char*’ [-Wformat=]
   15 |  scanf("%d",&a);
      |         ~^  ~~
      |          |  |
      |          |  char*
      |          int*
      |         %hhd
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:35:38 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp: In function ‘int main()’:
../src/Initial.cpp:15:10: warning: format ‘%d’ expects argument of type ‘int*’, but argument 2 has type ‘char*’ [-Wformat=]
   15 |  scanf("%d",&a);
      |         ~^  ~~
      |          |  |
      |          |  char*
      |          int*
      |         %hhd
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:36:08 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:38:17 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp:9:10: fatal error: iostream.h: No such file or directory
    9 | #include <iostream.h>
      |          ^~~~~~~~~~~~
compilation terminated.
make: *** [src/subdir.mk:20: src/Initial.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
07:38:35 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:39:00 **** Incremental Build of configuration Debug for project Initial ****
make all 
make: Nothing to be done for 'all'.
07:39:27 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp: In function ‘int main()’:
../src/Initial.cpp:15:10: warning: format ‘%d’ expects argument of type ‘int*’, but argument 2 has type ‘char*’ [-Wformat=]
   15 |  scanf("%d",&a);
      |         ~^  ~~
      |          |  |
      |          |  char*
      |          int*
      |         %hhd
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:39:53 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:40:40 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:42:32 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp: In function ‘int main()’:
../src/Initial.cpp:15:10: warning: format ‘%c’ expects argument of type ‘char*’, but argument 2 has type ‘char (*)[10]’ [-Wformat=]
   15 |  scanf("%c",&a);
      |         ~^  ~~
      |          |  |
      |          |  char (*)[10]
      |          char*
../src/Initial.cpp:16:19: warning: format ‘%c’ expects argument of type ‘int’, but argument 2 has type ‘char*’ [-Wformat=]
   16 |  printf("You are %c",a);
      |                  ~^  ~
      |                   |  |
      |                   |  char*
      |                   int
      |                  %s
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
07:43:10 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp: In function ‘int main()’:
../src/Initial.cpp:15:10: warning: format ‘%s’ expects argument of type ‘char*’, but argument 2 has type ‘char (*)[10]’ [-Wformat=]
   15 |  scanf("%s",&a);
      |         ~^  ~~
      |          |  |
      |          |  char (*)[10]
      |          char*
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
18:56:46 **** Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
../src/Initial.cpp: In function ‘int main()’:
../src/Initial.cpp:14:7: error: conflicting declaration ‘char a [10]’
   14 |  char a[10];
      |       ^
../src/Initial.cpp:13:6: note: previous declaration as ‘int a’
   13 |  int a,b,c;
      |      ^
make: *** [src/subdir.mk:20: src/Initial.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
18:57:15 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
18:57:26 **** Incremental Build of configuration Debug for project Initial ****
make all 
make: Nothing to be done for 'all'.
18:57:45 **** Incremental Build of configuration Debug for project Initial ****
make all 
Building file: ../src/Initial.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Initial.d" -MT"src/Initial.o" -o "src/Initial.o" "../src/Initial.cpp"
Finished building: ../src/Initial.cpp
 
Building target: Initial
Invoking: GCC C++ Linker
g++  -o "Initial"  ./src/Initial.o   
Finished building target: Initial
 
18:57:54 **** Incremental Build of configuration Debug for project Initial ****
make all 
make: Nothing to be done for 'all'.
